<resources>
    <string name="app_name">SportsLover</string>
    <string name="action_settings">Settings</string>
    <string name="sports_friend_search_hint">Serch</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>

    <!-- 注册 -->
    <string name="register_title">register</string>
    <string name="register_phone_default">Please input</string>
    <string name="register_check_num_default">Please input code</string>
    <string name="register_get_check_num">Get check number</string>
    <string name="register_name_default">your name</string>
    <string name="register_upass_default">your password</string>
    <string name="register_info">I have readed and agree the 《User agreement》of SportsLover</string>

    <string name="new_friends">newFriends</string>
    <string name="close">close</string>

    <string name="help_dialog_text">
    <i>开发者：TCL云创科技有限公司2017届雏鹰</i>
    \n
    \n
    <i>联系：zhijiao.li@tcl.com</i>
    \n
    \n
    <b>SportsLover是一款运动类型的App,目前只开发Andaroid版本。</b>
    <b>该App具有丰富的功能，针对不同类型的运动，进行运动规划，同时你还可以发布自己的活动以及参与别人发布的活动，兼具社交和运动的功能</b>
    \n
    \n
    <b>有任何建议或者反馈可以随时联系开发团队</b>
    </string>


    <!-- myFragment -->
    <string name="personalData">personal data</string>
    <string name="sportsRecords">records</string>
    <string name="weeklyGoals">weekly goal</string>
    <string name="myRoute">my route</string>
    <string name="myActivity">my activity</string>
    <string name="settings">settings</string>

    <!--personal data-->
    <string name="profilePhoto">Profile photo</string>
    <string name="Name">Name</string>
    <string name="Gender">Gender</string>
    <string name="Height">Height</string>
    <string name="Weight">Weight</string>
    <string name="Brithday">Brithday</string>
    <string name="editeName">A good name can make your friend remember you better</string>

    <!--sendDynamic-->
    <string name="sendDynamic1">Create Activities (1/2)</string>
    <string name="sendDynamic2">Create Activities(2/2)</string>
    <string name="motionType">Activity Type</string>
    <string name="startTime">Activity Start Time</string>
    <string name="endTime">Activity End Time</string>
    <string name="deadline">Application Deadline</string>
    <string name="place">Activity Location</string>
    <string name="area">Area of Promotion</string>
    <string name="send">Send</string>
    <string name="activityName">Activity Name:</string>
    <string name="inputActivity">Please enter the activity name</string>
    <string name="activityContent">Activity Content:</string>
    <string name="inputContent">Please enter the activity content</string>

    <string-array name="spingarr">
        <item>All Activity</item>
        <item>Running Activity</item>
        <item>Walking Activity</item>
        <item>Riding Activity</item>
    </string-array>


    <!--settings-->
    <string name="account">Account Management</string>
    <string name="privacySettings">Privacy Settings</string>
    <string name="sportsSettings">Sports Settings</string>
    <string name="informExercise">Inform Exercise</string>
    <string name="dailyNotification">Daily notification</string>
    <string name="clean">Wipe Cache</string>
    <string name="about">About</string>
    <string name="updates">Updates</string>
    <string name="dgender">Display my gender</string>
    <string name="dlocation">Display my location</string>
    <string name="tide">Tide to the phone number</string>
    <string name="Cellphone">Cell-phone Number</string>
    <string name="tips">After you add your phone number,you can login directly with your phone number and password</string>
    <string name="tideother">Tied to other accounts</string>
    <string name="wechat">WeChat</string>
    <string name="weibo">Weibo</string>
    <string name="QQ">QQ</string>
    <string name="facebook">Facebook</string>
    <string name="tips2">When you bind a third party account,you can login directly</string>
    <string name="logout">Logout</string>


    <!--添加手机号-->
    <string name="phone_number">Phone Number</string>
    <string name="verification">Verification Code</string>
    <string name="password">Password</string>

    <string name="main_tab_recent">Conversation</string>
    <string name="main_tab_contact">Contact</string>
    <string name="mian_tab_set">Set</string>

    <string name="add_avator">Avator</string>
    <string name="add_nick">Nick</string>
    <string name="add_name">Name</string>
    <string name="agree">Agree</string>
    <string name="new_friend">New Friend</string>

    <string name="chat">Stranger Chat</string>
    <string name="add_friend">Add Friend</string>

    <string name="set_notify">Message Notify</string>
    <string name="set_myinfo">Personal Information</string>
    <string name="set_blacklist">Black List</string>
    <string name="set_voice">Voice</string>
    <string name="set_vibrate">Vibrate</string>

    <string name="longclick_speak">Speak</string>
    <string name="picture">Picture</string>
    <string name="camera">Camera</string>
    <string name="location">Location</string>
    <string name="voice_up_tips">Cancel Voice Touch Up</string>
    <string name="voice_cancel_tips">Cancel Voice Touch Release</string>
    <string name="voice_seconds_tips">Voice Second</string>
    <string name="voice_short_tips">Voice UnTime </string>

    <string name="title_activity_user_info">UserInfoActivity</string>
</resources>
