<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_account_management"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.user.sportslover.activity.AccountManagement">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/mybackground"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/account_settings_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@null"
                android:padding="@dimen/normal_space"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="@dimen/normal_space"
                android:text="@string/account"
                android:textSize="@dimen/title_text_size" />
        </LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/normal_space"
        android:gravity="center_vertical"
        android:padding="@dimen/normal_space"
        android:text="@string/tide"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:weightSum="1">
        <TextView
            android:id="@+id/et_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawablePadding="@dimen/normal_space"
            android:gravity="center_vertical"
            android:padding="@dimen/normal_space"
            android:text="@string/Cellphone"
            android:textSize="16dp"  />

        <Button
            android:id="@+id/btn_account"
            android:layout_width="93dp"
            android:layout_height="28dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_add"
            android:checked="false"
            android:layout_marginLeft="80dp" />
    </LinearLayout>


    <TextView
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:drawablePadding="@dimen/normal_space"
    android:gravity="center_vertical"
    android:padding="@dimen/normal_space"
    android:text="@string/tips"
    android:textSize="16dp" />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/normal_space"
        android:gravity="center_vertical"
        android:padding="@dimen/normal_space"
        android:text="@string/tideother"
        android:textSize="16dp" />



    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/Wechat"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="@color/white"
        android:drawablePadding="@dimen/normal_space"
        android:drawableRight="@drawable/select"
        android:gravity="center_vertical"
        android:padding="@dimen/normal_space"
        android:text="@string/wechat"
        android:textSize="16dp" />

    <TextView
        android:layout_marginTop="1dp"
        android:id="@+id/Weibo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawablePadding="@dimen/normal_space"
        android:gravity="center_vertical"
        android:padding="@dimen/normal_space"
        android:text="@string/weibo"
        android:textSize="16dp" />

    <TextView
        android:layout_marginTop="1dp"
        android:id="@+id/QQ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawablePadding="@dimen/normal_space"
        android:gravity="center_vertical"
        android:padding="@dimen/normal_space"
        android:text="@string/QQ"
        android:textSize="16dp" />

    <TextView
        android:layout_marginTop="1dp"
        android:id="@+id/Facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawablePadding="@dimen/normal_space"
        android:gravity="center_vertical"
        android:padding="@dimen/normal_space"
        android:text="@string/facebook"
        android:textSize="16dp" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/normal_space"
        android:gravity="center_vertical"
        android:padding="@dimen/normal_space"
        android:text="@string/tips2"
        android:textSize="16dp" />
    <Button
        android:id="@+id/logout"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/logoutbtn"
        android:text="@string/logout"/>

</LinearLayout>
